--- a/assets/style.css
+++ b/assets/style.css
@@ -118,3 +118,46 @@ a {
 .banner-content img {
     width: 70%;
 }
+
+/* Banner Responsive */
+@media only screen and (max-width: 1024px) {
+    .banner-content .title {
+        font-size: 50px;
+    }
+
+    .banner-content img {
+        width: 90%;
+    }
+}
+
+@media only screen and (max-width: 676px) {
+    .half-width {
+        width: 100%;
+    }
+    .banner .banner-content {
+        display: block;
+        height: 74vh;
+        padding: 25% 0;
+    }
+    .banner-content br {
+        display: none;
+    }
+    .banner-content .title {
+        font-size: 32px;
+        line-height: 40px;
+        margin-bottom: 30px;
+    }
+
+    .banner-content img {
+        width: 100%;
+        padding-top: 25%;
+    }
+
+    .banner-content .half-width {
+        text-align: center;
+    }
+
+    .banner-content .half-width:first-child {
+        padding-left: 0;
+    }
+}
