Img Animation: mouse hover banner img zoom in-out

--- a/assets/style.css
+++ b/assets/style.css
@@ -119,7 +119,19 @@ a {
     width: 70%;
 }
 
+@keyframes imgZoom-inout {
+    50% {
+        transform: scale(1.2);
+    }
+}
+
 /* Banner Responsive */
+@media only screen and (min-width: 768px) {
+    .banner:hover .zoom {
+        animation: imgZoom-inout 5s linear infinite;
+    }
+}
+
 @media only screen and (max-width: 1024px) {
     .banner-content .title {
         font-size: 50px;
@@ -134,14 +146,21 @@ a {
     .half-width {
         width: 100%;
     }
+
+    .banner {
+        overflow-x: hidden;
+    }
+
     .banner .banner-content {
         display: block;
         height: 74vh;
         padding: 25% 0;
     }
+
     .banner-content br {
         display: none;
     }
+
     .banner-content .title {
         font-size: 32px;
         line-height: 40px;
@@ -159,5 +178,9 @@ a {
 
     .banner-content .half-width:first-child {
         padding-left: 0;
+    }
+
+    .zoom {
+        animation: imgZoom-inout 5s linear infinite;
     }
 }
