--- a/assets/style.css
+++ b/assets/style.css
@@ -225,6 +225,13 @@ a {
 }
 
 .players .player p {
+    width: 100%;
+    height: 104px;
+    overflow: hidden;
     margin-bottom: 0;
-}
+    text-align: justify;
+    display: -webkit-box;
+    -webkit-line-clamp: 4;
+    text-overflow: ellipsis;
+    -webkit-box-orient: vertical;
 }
