--- a/assets/style.css
+++ b/assets/style.css
@@ -220,7 +220,7 @@ a {
     transition: all 1s ease-in-out;
 }
 
-.players .player:hover  > img {
+.players .player:hover > img {
     bottom: -7px;
 }
 
@@ -234,4 +234,33 @@ a {
     -webkit-line-clamp: 4;
     text-overflow: ellipsis;
     -webkit-box-orient: vertical;
+}
+
+/* Players Section Responsive */
+@media only screen and (max-width: 1400px) {
+    .players-container {
+        display: flex;
+        text-align: center;
+        justify-content: center;
+    }
+
+    .players {
+        grid-row-gap: 25px;
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media only screen and (max-width: 865px) {
+    .players {
+        grid-row-gap: 25px;
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .players .player {
+        width: 250px;
+    }
+
+    .players .player .sm-title {
+        font-size: 24px;
+    }
 }
