--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,5 @@
 /* Google Font Include */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;500;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Niconne&family=Poppins:wght@100;400;500;800&display=swap');
 
 :root {
     --white: #ffffff;
@@ -336,4 +336,16 @@ a {
         padding: 30px 0;
         grid-template-columns: repeat(1, 1fr);
     }
+}
+
+/****************************\
+   Footer Img Section Start
+\****************************/
+.footer-img {
+    margin: 50px 0;
+    justify-content: center;
+}
+
+.footer-img img {
+    width: 250px;
 }
