--- a/assets/style.css
+++ b/assets/style.css
@@ -867,7 +867,7 @@ header {
 
 .contact .box form .name, html body .contact .box form .company,
 .contact .box form .email, html body .contact .box form .tele {
-    margin-bottom: 20px;
+    margin-bottom: 30px;
 }
 
 .contact .box form .name label,
@@ -882,9 +882,13 @@ header {
 .contact .box form .company input,
 .contact .box form .email input,
 .contact .box form .tele input {
-    width: 95%;
+    width: 80%;
     height: 60%;
     padding: 5px;
+    outline: none;
+    padding: 5px 20px;
+    border: 1px solid var(--iconColor);
+    height: 60%;
     outline: none;
     border: 1px solid var(--iconColor);
 }
@@ -900,9 +904,10 @@ header {
 
 .contact .box form .message #message {
     height: 90px;
-    width: 97.5%;
+    width: 90%;
     padding: 5px;
     outline: none;
+    padding: 20px;
     border: 1px solid var(--iconColor);
 }
 
@@ -915,18 +920,18 @@ header {
     border: none;
     margin: auto;
     opacity: 0.9;
-    padding: 10px;
+    padding: 15px;
     outline: none;
     display: block;
-    max-width: 80%;
     cursor: pointer;
-    border-radius: 5px;
+    border-radius: 0;
     text-align: center;
     font-weight: bold;
     color: var(--white);
     letter-spacing: 0.2em;
     background: var(--themeColor);
     transition: all 0.4s ease-in-out;
+    margin-top: 10px;
 }
 
 .contact .box form .submit input[type=submit]:hover,
@@ -953,6 +958,7 @@ header {
     .contact .box .info {
         grid-row: 1/3;
         font-size: 1.2em;
+        margin-right: 20px;
         border-top-left-radius: 10px;
         border-bottom-left-radius: 10px;
     }
@@ -967,6 +973,7 @@ header {
 
     .contact .box form {
         width: 86%;
+        text-align: center;
     }
 
     .contact .box .info {
@@ -974,7 +981,23 @@ header {
         border-top-left-radius: 10px;
         border-top-right-radius: 10px;
     }
-}
+    
+    .contact .box form .name, html body .contact .box form .company,
+    .contact .box form .email, html body .contact .box form .tele {
+        margin-bottom: 15px;
+    }
+    
+    .contact .box form .name input,
+    .contact .box form .company input,
+    .contact .box form .email input,
+    .contact .box form .tele input {
+        padding: 0 5px;
+        padding-right: 15px;
+    }
+    
+    .contact .box form .message #message {
+        width: 80%;
+    }
 
 /****************************\
      Footer Section Start
