--- a/assets/style.css
+++ b/assets/style.css
@@ -998,6 +998,7 @@ header {
     .contact .box form .message #message {
         width: 80%;
     }
+}
 
 /****************************\
      Footer Section Start
